--- a/src/app/components/hackathon/watch/watch.component.html
+++ b/src/app/components/hackathon/watch/watch.component.html
@@ -27,8 +27,30 @@
         </div>
 
 
-        
-         <div class="col-12 heigthCards">
+        <div class="cards-material">
+            <p-card>
+                <div class="tumb"></div>
+                <h5>Português</h5>
+                <p>Version • Description</p>
+            </p-card>
+
+
+            <p-card>
+                <div class="tumb"></div>
+                <h5> Português</h5>
+                <p>Version • Description</p>
+            </p-card>
+
+            <p-card>
+                <div class="tumb"></div>
+                <h5>Português</h5>
+                <p>Version • Description</p>
+            </p-card>
+
+        </div>
+        <!------------------------------------------------------------------------------>
+
+        <!--  <div class="col-12 heigthCards">
             <swiper [slidesPerView]="3" [spaceBetween]="20" [pagination]="{ clickable: true }">
                 <ng-template *ngFor="let video of alta" swiperSlide>
                     <div (click)="seeVideo(video)">
@@ -41,12 +63,35 @@
                     </div>
                 </ng-template>
             </swiper>
-        </div>
+        </div> -->
         <div class="col-12 mt-2">
             <span class="titleCarousel">Meus deveres de casa</span>
             <p-divider></p-divider>
         </div>
-        <div class="col-12 heigthCards">
+
+        <div class="cards-material">
+            <p-card>
+                <div class="tumb"></div>
+                <h5>Português</h5>
+                <p>Version • Description</p>
+            </p-card>
+
+
+            <p-card>
+                <div class="tumb"></div>
+                <h5> Português</h5>
+                <p>Version • Description</p>
+            </p-card>
+
+            <p-card>
+                <div class="tumb"></div>
+                <h5>Português</h5>
+                <p>Version • Description</p>
+            </p-card>
+
+        </div>
+
+        <!-- <div class="col-12 heigthCards">
             <swiper [slidesPerView]="3" [spaceBetween]="20" [pagination]="{ clickable: true }">
                 <ng-template *ngFor="let video of relevantes" swiperSlide>
                     <div (click)="seeVideo(video)">
@@ -59,12 +104,35 @@
                     </div>
                 </ng-template>
             </swiper>
-        </div>
+        </div> -->
         <div class="col-12 mt-2">
             <span class="titleCarousel">Recentes</span>
             <p-divider></p-divider>
         </div>
-        <div class="col-12 heigthCards">
+
+        <div class="cards-material">
+            <p-card>
+                <div class="tumb"></div>
+                <h5>Português</h5>
+                <p>Version • Description</p>
+            </p-card>
+
+
+            <p-card>
+                <div class="tumb"></div>
+                <h5> Português</h5>
+                <p>Version • Description</p>
+            </p-card>
+
+            <p-card>
+                <div class="tumb"></div>
+                <h5>Português</h5>
+                <p>Version • Description</p>
+            </p-card>
+
+        </div>
+
+        <!-- <div class="col-12 heigthCards">
             <swiper [slidesPerView]="3" [spaceBetween]="20" [pagination]="{ clickable: true }">
                 <ng-template *ngFor="let video of recentes" swiperSlide>
                     <div (click)="seeVideo(video)">
@@ -77,12 +145,35 @@
                     </div>
                 </ng-template>
             </swiper>
-        </div>
+        </div> -->
         <div class="col-12 mt-2">
             <span class="titleCarousel">Mais curtidos</span>
             <p-divider></p-divider>
         </div>
-        <div class="col-12 heigthCards mb-4">
+
+        <div class="cards-material">
+            <p-card>
+                <div class="tumb"></div>
+                <h5>Português</h5>
+                <p>Version • Description</p>
+            </p-card>
+
+
+            <p-card>
+                <div class="tumb"></div>
+                <h5> Português</h5>
+                <p>Version • Description</p>
+            </p-card>
+
+            <p-card>
+                <div class="tumb"></div>
+                <h5>Português</h5>
+                <p>Version • Description</p>
+            </p-card>
+
+        </div>
+
+        <!--  <div class="col-12 heigthCards mb-4">
             <swiper [slidesPerView]="3" [spaceBetween]="20" [pagination]="{ clickable: true }">
                 <ng-template *ngFor="let video of curtidos" swiperSlide>
                     <div (click)="seeVideo(video)">
@@ -95,7 +186,7 @@
                     </div>
                 </ng-template>
             </swiper>
-        </div>
+        </div> -->
 
 
 
